<resources>
    <string name="app_name">BuskingGo</string>

    <string-array name="sort">
        <item>날짜순</item>
        <item>버스커이름순</item>
        <item>장소순</item>
    </string-array>

    <string-array name="gus">
        <item>강서구</item>
        <item>양천구</item>
        <item>구로구</item>
        <item>영등포구</item>
        <item>동작구</item>
        <item>금천구</item>
        <item>관악구</item>
        <item>서초구</item>
        <item>강남구</item>
        <item>송파구</item>
        <item>강동구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>용산구</item>
        <item>성동구</item>
        <item>동대문구</item>
        <item>광진구</item>
        <item>성북구</item>
        <item>중랑구</item>
        <item>강북구</item>
        <item>도봉구</item>
        <item>노원구</item>
    </string-array>

    <string-array name="genres">
        <item>어쿠스틱</item>
        <item>힙합</item>
        <item>댄스</item>
        <item>마술</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="buskinglist">버스킹 목록</string>
    <string name="buskingRegister">버스킹 등록</string>
    <string name="seoulBusking">거리예술존</string>
    <string name="myPage">마이페이지</string>

    <string name="title_activity_busker_info">BuskerInfoActivity</string>
    <string name="title_activity_busking_info">BuskingInfoActivity</string>
    <string name="action_back">action_back</string>
    <string name="favorite_cnt">0</string>
    <string name="buskerInfoPlace">주요활동장소 :</string>
    <string name="buskerInfoJenre">장르 :</string>
    <string name="buskerInfoName">버스커명</string>
    <string name="buskerInfoFavorite">좋아요</string>
    <string name="introduce">소개</string>
    <string name="busker_info_list">등록된 공연 리스트</string>
    <string name="date">날짜</string>
    <string name="place">장소</string>
    <string name="time">시간</string>
    <string name="no_list">- 예정된 공연이 없습니다.</string>
    <string name="no_favorite">좋아요한 버스커가 없습니다.</string>
    <string name="no_like">좋아요한 버스커가 없습니다</string>
    <string name="no_want">가볼래요 한 공연이 없습니다</string>
    <string name="no_past">가볼래요 한 지난 공연이 없습니다.</string>
    <string name="reply">답글 달기</string>
    <string name="reply_hint">힘이 되는 한마디 남겨주세요.</string>
    <string name="ok">확인</string>
    <string name="no_reply">등록된 댓글이 없습니다</string>
    <string name="want">가볼래요</string>
    <string name="logout">로그아웃</string>
    <string name="change_pwd">비밀번호 변경</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="busker_register">버스커 등록</string>
    <string name="todo">TODO</string>

    <string name="n_id">B8IFDW8XxJeNp_Ts2QCz</string>
    <string name="n_secret">yqkADGaQNK</string>
    <string name="str_done">완료</string>
    <string name="notice_select_addr">지도를 움직여 위치를 지정하세요.</string>

    </resources>
