<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/itemBusking"
    android:weightSum="10"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/tv_date_busking_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="8dp"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:ellipsize="none"/>

    <TextView
        android:id="@+id/tv_place_busking_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:padding="8dp"
        android:text="@string/place"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:ellipsize="none"/>

    <TextView
        android:id="@+id/tv_time_busking_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_access_time_white_18dp"
        android:drawablePadding="4dp"
        android:text="@string/time"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:ellipsize="none"/>


</LinearLayout>