<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configure.ConfigureActivity"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="설정" />

    <LinearLayout
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/registerBuskerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/busker_register"
            android:textColor="@color/white"
            android:layout_marginBottom="4dp"/>

        <Button
            android:id="@+id/changeNicknameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:text="@string/change_nickname" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:text="@string/change_pwd" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/logout" />

    </LinearLayout>

</RelativeLayout>