<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/itemBuskingBackground"
    android:padding="8dp">

    <ImageView
        android:id="@+id/past_photo_item"
        android:background="@color/itemBuskingBackground"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="4sp"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/past_photo_item"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:padding="4dp">

        <TextView
            android:id="@+id/past_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/buskerInfoName"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/past_place"
            android:layout_below="@+id/past_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="장소 :"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/past_place_item"
            android:layout_toEndOf="@id/past_place"
            android:layout_below="@+id/past_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/past_date_item"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/past_time_item"
            android:layout_below="@+id/past_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16sp"
            android:drawableStart="@drawable/ic_access_time_white_18dp"
            android:drawablePadding="4dp"
            android:text="@string/time"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="none"/>
    </RelativeLayout>

</RelativeLayout>