<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@color/itemBuskingBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageViewBusking"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            tools:ignore="ContentDescription"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewBuskerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="8dp"
                    android:text="버스커이름"
                    android:textSize="16sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_date_item"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/date"/>
            </RelativeLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16sp">

                <TextView
                    android:id="@+id/textViewBuskingPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/place"
                    android:textSize="14sp"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/textViewBuskingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/time"
                    android:drawableStart="@drawable/ic_access_time_white_18dp"
                    android:drawablePadding="4dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>